--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "core-js": "^2.6.9",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
-    "igniteui-angular": "~7.3.0",
     "igniteui-angular-core": "^7.2.3",
     "igniteui-angular-excel": "^7.2.3",
     "igniteui-angular-spreadsheet": "^7.2.3",
@@ -40,6 +39,7 @@
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.15",
     "@angular/language-service": "~7.2.15",
+    "@types/file-saver": "^2.0.1",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.8.16",
     "@types/jasminewd2": "~2.0.3",
